Make sure spotlight canvas is aligned with the map.

--- a/css/newplay_theme.css
+++ b/css/newplay_theme.css
@@ -38,6 +38,11 @@
     position: absolute;
   }
 
+  #map canvas {
+    top: 0;
+    left: 0;
+  }
+
 
 /* Header */
 
